@@ -37,7 +37,7 @@ type serviceInfo struct {
 var oldRegexp = regexp.MustCompile("minute")
 
 // EnsureUp starts all the requested services (must be defined in docker-compose.yml)
-// with a default timeout of 60 seconds
+// with a default timeout of 300 seconds
 func EnsureUp(t *testing.T, services ...string) {
 	EnsureUpWithTimeout(t, 300, services...)
 }
