@@ -197,6 +197,7 @@ metricbeat.modules:
 - module: elasticsearch
   metricsets:
    #- index
+   #- index_summary
    - node
    - node_stats
   period: 10s
