@@ -1,0 +1,61 @@
+{
+    "@timestamp": "2017-10-12T08:05:34.853Z",
+    "beat": {
+        "hostname": "host.example.com",
+        "name": "host.example.com"
+    },
+    "elasticsearch": {
+        "cluster": {
+            "id": "UziYVLPkTTmCzccc6102Bg",
+            "name": "elasticsearch"
+        },
+        "index": {
+            "summary": {
+                "primaries": {
+                    "docs": {
+                        "count": 231,
+                        "deleted": 56
+                    },
+                    "segments": {
+                        "count": 16,
+                        "memory": {
+                            "bytes": 105245
+                        }
+                    },
+                    "store": {
+                        "size": {
+                            "bytes": 444882
+                        }
+                    }
+                },
+                "total": {
+                    "docs": {
+                        "count": 231,
+                        "deleted": 56
+                    },
+                    "segments": {
+                        "count": 16,
+                        "memory": {
+                            "bytes": 105245
+                        }
+                    },
+                    "store": {
+                        "size": {
+                            "bytes": 444882
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "metricset": {
+        "host": "127.0.0.1:9200",
+        "module": "elasticsearch",
+        "name": "index_summary",
+        "namespace": "elasticsearch.index.summary",
+        "rtt": 115
+    },
+    "service": {
+        "name": "elasticsearch"
+    }
+}
