@@ -1,0 +1,1 @@
+This is the index summary metricset of the module elasticsearch.
