@@ -1,0 +1,55 @@
+- name: index.summary
+  type: group
+  description: >
+    index
+  fields:
+    - name: primaries
+      type: group
+      fields:
+        - name: docs.count
+          type: long
+          description: >
+            Total number of documents in the index.
+        - name: docs.deleted
+          type: long
+          description: >
+            Total number of deleted documents in the index.
+        - name: store.size.bytes
+          type: long
+          format: bytes
+          description: >
+            Total size of the index in bytes.
+        - name: segments.count
+          type: long
+          description: >
+            Total number of index segments.
+        - name: segments.memory.bytes
+          type: long
+          format: bytes
+          description: >
+            Total number of memory used by the segments in bytes.
+    - name: total
+      type: group
+      fields:
+        - name: docs.count
+          type: long
+          description: >
+            Total number of documents in the index.
+        - name: docs.deleted
+          type: long
+          description: >
+            Total number of deleted documents in the index.
+        - name: store.size.bytes
+          type: long
+          format: bytes
+          description: >
+            Total size of the index in bytes.
+        - name: segments.count
+          type: long
+          description: >
+            Total number of index segments.
+        - name: segments.memory.bytes
+          type: long
+          format: bytes
+          description: >
+            Total number of memory used by the segments in bytes.
