@@ -6,17 +6,17 @@
     },
     "elasticsearch": {
         "cluster": {
-            "name": "docker-cluster"
+            "name": "elasticsearch"
         },
         "node": {
             "jvm": {
                 "memory": {
                     "heap": {
                         "init": {
-                            "bytes": 536870912
+                            "bytes": 1073741824
                         },
                         "max": {
-                            "bytes": 519438336
+                            "bytes": 1038876672
                         }
                     },
                     "nonheap": {
@@ -28,13 +28,13 @@
                         }
                     }
                 },
-                "version": "1.8.0_161"
+                "version": "1.8.0_144"
             },
-            "name": "q7ya3ngBTS2cxzYi0duQdA",
+            "name": "523zXyT6TRWiqXcQItnkyQ",
             "process": {
                 "mlockall": false
             },
-            "version": "6.2.4"
+            "version": "6.3.0"
         }
     },
     "metricset": {
