@@ -17,8 +17,9 @@ class Test(metricbeat.BaseTest):
 
     @parameterized.expand([
         "index",
-        "node",
+        "index_summary",
         "node_stats",
+        "node",
     ])
     @unittest.skipUnless(metricbeat.INTEGRATION_TESTS, "integration test")
     def test_metricsets(self, metricset):
